# heatgun

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  README.md
libs/: CMakeLists.txt
modules/dungeonmap/: dungeon_map.cpp  dungeon_map.h
project/: default_bus_layout.tres  dungeon_env.tres  export_presets.cfg  project.godot
project/fonts/: ebitwonder.tres
project/materials/: HUDHelpScene.tscn  blue_crystal.tres  cold_projectile_mat.tres  cold_projectile_particle_tail.tres  hot_projectile_mat.tres  menu_btn_style.tres  player_mat.tres  projectile_particle_tail.tres  white_ice_npc_mat.tres
project/scenes/: Crystal.tscn  DeathScene.tscn  HUD.tscn  IceNPC.tscn  MainMenu.tscn  MainMenuFade.tres  MiniMap.tscn  NPCProjectile.tscn  NextLevel.tscn  Notifications.tscn  OldWorld.tscn  PauseMenu.tscn  Player.tscn  Projectile.tscn  ProjectileEnd.tscn  UIValueContainer.tscn  World.tscn
project/scripts/: BaseNPC.gd  Camera.gd  CrystalBody.gd  CrystalMesh.gd  Dungeon.gd  DungeonMap.gd  IceNPC.gd  MainTheme.gd  MiniMap.gd  NPCProjectile.gd  Navigation.gd  Player.gd  Projectile.gd  StartGameBtn.gd  Weapon.gd
project/scripts/tools/: DungeonTool.gd
project/scripts/ui/: DeathRestartBtn.gd  DeathWnd.gd  EnemyHealthValueUI.gd  ExitBtn.gd  HealthValueUI.gd  MiniMap.gd  NextLevel.gd  NextLevelBtn.gd  PauseMenu.gd  PauseMenuExitBtn.gd  PauseRestartBtn.gd  Resume.gd  ScoreValueContainerUI.gd  TempValueContainerUI.gd
src/common/heatgun/: CMakeLists.txt  defines.hpp
src/dungeon_map/: CMakeLists.txt  dungeon_map.cpp  dungeon_map.hpp  dungeon_map_mesh_builder.cpp  dungeon_map_mesh_builder.hpp  init.cpp
src/map_generator/: CMakeLists.txt  init.cpp  map_generator.cpp  map_generator.hpp
src/opensimplex/: CMakeLists.txt  open_simplex.cpp  open_simplex.h
src/opensimplex/lib/: open-simplex-noise.c  open-simplex-noise.h
